--- a/style.css
+++ b/style.css
@@ -3,45 +3,61 @@
     src: url(./images/Norse-Bold.otf);
 }
 
-* {
-    padding: 0;
-    margin: 0;
-}
-body {
-    background-color: black;
-    font-family: Norse-Bold, sans-serif;
-}
-
-.main {
+body{
     display: flex;
-    flex-direction: row;
-    background-color: white;
-    width: 67vw;
     height: 100vh;
-    margin-left: 228px;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background: black;
 }
 
-.main1{
-    width: 36%;
-    background-image: url(/images/halie-west-25xggax4bSA-unsplash.jpg);
-    background-position: center;
+.container{
+    display: flex;
+    width: 68vw;
+    background: #fff;
+
+}
+
+.container .left{
+    max-width: 320px;
+    width: 100%;
+    background-image: url(/Sign-UP-Form/images/halie-west-25xggax4bSA-unsplash.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.main2 {
-    background-color: #fafafa;
-    width: 64%;
+.container .right{
+    max-width: 700px;
+    width: 100%;
 }
 
-.first {
-    height: 33vh;
+.container .right form .user-details{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 20px 0 12px 0;
 }
 
-.second {
-    height: 33vh;
+form .user-details .input-box{
+    margin-bottom: 15px;
+    width: calc(100% / 2 - 20px);
 }
 
-.third {
-    height: 33vh;
+.user-details .input-box .detail{
+    display: block;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+
+.user-details .input-box input{
+    height: 22px;
+    width: 70%;
+    outline: none;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    padding-left: 5px;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
 }
