--- a/style.css
+++ b/style.css
@@ -9,55 +9,107 @@ body{
     justify-content: center;
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
-    background: black;
+    background: linear-gradient(135deg, #5dbe86, #2aac4a);
 }
 
 .container{
     display: flex;
-    width: 68vw;
+    width: 73vw;
     background: #fff;
 
 }
 
 .container .left{
-    max-width: 320px;
-    width: 100%;
+    width: 28vw;
     background-image: url(/Sign-UP-Form/images/halie-west-25xggax4bSA-unsplash.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .container .right{
-    max-width: 700px;
-    width: 100%;
+    width:45vw;
+    padding-left: 20px;
+}
+
+div.right-1{
+    display: flex;
+    align-items: flex-end;
+    font-weight: bold;
+    margin-bottom: 10px;
+    height: 30vh;
+
+}
+
+div.title{
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.container .right-2{
+    height: 40vh;
+}
+
+div.user-details{
+   
 }
 
 .container .right form .user-details{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 20px 0 12px 0;
 }
 
 form .user-details .input-box{
     margin-bottom: 15px;
-    width: calc(100% / 2 - 20px);
+    width: calc(100% / 2);
 }
 
 .user-details .input-box .detail{
     display: block;
     font-weight: 500;
-    margin-bottom: 5px;
+    margin-bottom: 1px;
+}
+
+.user-details .input-box .detail{
+    font-variant-caps: all-petite-caps;
 }
 
 .user-details .input-box input{
-    height: 22px;
-    width: 70%;
+    height: 20px;
+    width: 80%;
     outline: none;
-    border-radius: 3px;
+    border-radius: 4px;
     border: 1px solid #ccc;
     padding-left: 5px;
     border-bottom-width: 2px;
     transition: all 0.3s ease;
+}
+
+.user-details .input-box input:focus,
+.user-details .input-box input:valid{
+    border-color:#59b670;
+}
+
+form .button{
+    display: flex;
+    height: 38px;
+    margin: 20px 0;
+}
+
+form .button input{
+    height: 100%;
+    width: 25%;
+    color: #fafafa;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    background: linear-gradient(135deg, #5dbe86, #2aac4a);
+}
+
+form .button input:hover{
+    background: linear-gradient(-135deg, #5dbe86, #2aac4a);
 }
