--- a/style.css
+++ b/style.css
@@ -29,14 +29,34 @@ body{
 }
 
 .left .uper{
+    display: flex;
+    justify-content: center;
     height: 50vh;
 }
 
 .left .bottom-text{
     display: flex;
     justify-content: center;
-    padding-top: 270px;
+    font-size: 12px;
+    padding-top: 300px;
     color: white;
+}
+
+span.logo-text{
+    font-family: Norse-Bold, sans-serif;
+    font-size: 55px;
+    color: white;
+}
+
+div.logo{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-top: 160px;
+}
+img {
+    width:15%;
+    height:40%;
 }
 
 .container .right{
@@ -48,7 +68,7 @@ div.right-1{
     display: flex;
     align-items: flex-end;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
     height: 30vh;
 
 }
@@ -74,7 +94,7 @@ div.user-details{
 
 form .user-details .input-box{
     margin-bottom: 15px;
-    width: calc(100% / 3);
+    width: calc(100% / 2);
 }
 
 .user-details .input-box .detail{
@@ -89,7 +109,7 @@ form .user-details .input-box{
 
 .user-details .input-box input{
     height: 20px;
-    width: 80%;
+    width: 60%;
     outline: none;
     border-radius: 4px;
     border: 1px solid #ccc;
@@ -115,7 +135,7 @@ form .button input{
     color: #fafafa;
     border: none;
     border-radius: 5px;
-    font-size: 18px;
+    font-size: 12px;
     font-weight: 500;
     letter-spacing: 1px;
     background: linear-gradient(135deg, #5dbe86, #2aac4a);
