--- a/style.css
+++ b/style.css
@@ -54,10 +54,11 @@ div.logo{
     justify-content: center;
     margin-top: 160px;
     width: 100%;
-    height: 12vh;
-    background: rgba(14, 13, 13, 0.5);
+    height: 13vh;
+    background: rgba(5, 5, 5, 0.5);
 }
 img {
+    margin-top: 5px;
     width:20%;
     height:90%;
 }
